# OpenWalnut-Modules

./: .directory  .hgchurn  .hgignore  README easy setup.sh  README.md  __README  makeAllToolboxes
.repository_tools/: makeAllToolboxes
EducationalToolbox/: COPYING  README
EducationalToolbox/doc/developer/: doxygenConfig
EducationalToolbox/src/: CMakeLists.txt  WToolkit.cpp  WToolkit.h
EducationalToolbox/src/thresholdingExample/: WMThresholdingExample.cpp  WMThresholdingExample.h  WMThresholdingExample.xpm
FiberClusteringToolbox/doc/developer/: doxygenLayout.xml
FiberClusteringToolbox/resources/FiberClusteringResources/: META
FiberClusteringToolbox/src/: CMakeLists.txt  WDataSetMatrixSym.cpp  WDataSetMatrixSym.h  WToolkit.cpp
FiberClusteringToolbox/src/centerLine/: WMCenterLine.cpp  WMCenterLine.h
FiberClusteringToolbox/src/clusterParamDisplay/: WMClusterParamDisplay.cpp  WMClusterParamDisplay.h  WMClusterParamDisplay.xpm
FiberClusteringToolbox/src/clusterSlicer/: WMClusterSlicer.cpp  WMClusterSlicer.h  WMClusterSlicer.xpm
FiberClusteringToolbox/src/detTractClustering/: WCheckCudaError.cpp  WCheckCudaError.h  WCudaReduce.cu  WMDetTractClustering.cpp  WMDetTractClustering.h  WMDetTractClustering.xpm  WMDetTractClusteringCudaInterface.cpp  WMDetTractClusteringCudaInterface.h  WMDetTractClusteringCudaKernel.cu  WMDetTractClusteringCudaKernel.h  WProgressWrapper.cpp  WProgressWrapper.h  WProgressWrapperData.h  pansen
FiberClusteringToolbox/src/detTractCulling/: .WCullingStrategyInterface.cpp.swp  .WCullingStrategyInterface.h.swp  .WLengthCulling.cpp.swp  .WLengthCulling.h.swp  .WMDetTractCulling.cpp.swp  .WMDetTractCulling.h.swp  .WZhangThresholdCulling.cpp.swp  .WZhangThresholdCulling.h.swp  WCullingStrategyInterface.cpp  WCullingStrategyInterface.h  WLengthCulling.cpp  WLengthCulling.h  WMDetTractCulling.cpp  WMDetTractCulling.h  WMDetTractCulling.xpm  WZhangThresholdCulling.cpp  WZhangThresholdCulling.h
FiberClusteringToolbox/src/directionHistogram/: WMDirectionHistogram.cpp  WMDirectionHistogram.h
FiberClusteringToolbox/src/edgeBundling/: WBundlerCPU.cpp  WBundlerCPU.h  WEdgeBundlingCPU.cpp  WEdgeBundlingCPU.h  WEdgeBundlingInterface.cpp  WEdgeBundlingInterface.h  WMEdgeBundling.cpp  WMEdgeBundling.h  WOpenCLCode.cpp  WOpenCLCode.h
FiberClusteringToolbox/src/fiberColoring/: WBoyColoring.cpp  WBoyColoring.h  WBoyGlobalColoring.cpp  WBoyGlobalColoring.h  WColoring_I.cpp  WColoring_I.h  WMFiberColoring.cpp  WMFiberColoring.h  WSimilarityColoring.cpp  WSimilarityColoring.h  WStartEndColoring.cpp  WStartEndColoring.h
FiberClusteringToolbox/src/gaussProcesses/: WDataSetGP.cpp  WDataSetGP.h  WGaussProcess.cpp  WGaussProcess.h  WGaussProcessesMain.cpp  WGaussProcessesMain.h
FiberClusteringToolbox/src/gaussProcesses/detTract2GPConvert/: WMDetTract2GPConvert.cpp  WMDetTract2GPConvert.h  WMDetTract2GPConvert.xpm
FiberClusteringToolbox/src/gaussProcesses/detTractClusteringGP/: WMDetTractClusteringGP.cpp  WMDetTractClusteringGP.h
FiberClusteringToolbox/src/gaussProcesses/gpView/: WMGpView.cpp  WMGpView.h
FiberClusteringToolbox/src/gaussProcesses/test/: WGaussProcess_test.h
FiberClusteringToolbox/src/lineGuidedSlice/: WMLineGuidedSlice.cpp  WMLineGuidedSlice.h  WMLineGuidedSlice.xpm
FiberClusteringToolbox/src/lineGuidedSlice/shaders/: WMLineGuidedSlice-fragment.glsl  WMLineGuidedSlice-vertex.glsl
FiberClusteringToolbox/src/loadClusters/: WMLoadClusters.cpp  WMLoadClusters.h  WReaderFiberClusters.cpp  WReaderFiberClusters.h
FiberClusteringToolbox/src/matrixWriter/: WMMatrixWriter.cpp  WMMatrixWriter.h
FiberClusteringToolbox/src/writeClusters/: WMWriteClusters.cpp  WMWriteClusters.h  WWriterFiberClusters.cpp  WWriterFiberClusters.h
FiberClusteringToolbox/tools/: style
FiberClusteringToolbox/tools/cmake/: FindCxxTest.cmake  FindOpenCL.cmake  FindPackageHandleStandardArgs.cmake  Findbiosig.cmake  Findeigen3.cmake  Findniftilib.cmake  OpenWalnutVersion.cmake
FiberStippleToolbox/: tools
FiberStippleToolbox/doc/developer/: doxygenConfig
FiberStippleToolbox/src/: CMakeLists.txt  WMAbstractSliceModule.cpp  WMAbstractSliceModule.h  WPropTransfer.cpp  WPropTransfer.h  WToolkit.cpp
FiberStippleToolbox/src/aaSlices/: WMAASlices.cpp  WMAASlices.h  WMAASlices.xpm
FiberStippleToolbox/src/aaSlices/shaders/: WAASlices-fragment.glsl  WAASlices-vertex.glsl
FiberStippleToolbox/src/fiberStipples/: WMFiberStipples.cpp  WMFiberStipples.h  WMFiberStipples.xpm  WPoissonDiskGen.cpp  WPoissonDiskGen.h  WSampler2D.cpp  WSampler2D.h
FiberStippleToolbox/src/fiberStipples/ext/: CMakeLists.txt  LICENSE.txt  PDSampling.cpp  PDSampling.h
FiberStippleToolbox/src/fiberStipples/shaders/: WFiberStipples-fragment.glsl  WFiberStipples-uniforms.glsl  WFiberStipples-varyings.glsl  WFiberStipples-vertex.glsl
FiberStippleToolbox/src/fiberStipples/test/: WPoissonDiskGen_test.h  WSampler2D_test.h
FiberStippleToolbox/src/isoLines/: WMIsoLines.cpp  WMIsoLines.h  WMIsoLines.xpm
FiberStippleToolbox/src/isoLines/shaders/: WIsolines-fragment.glsl  WIsolines-varyings.glsl  WIsolines-vertex.glsl
FiberStippleToolbox/tools/style/: brainlint
LiDARToolbox/: README  VERSION  tools
LiDARToolbox/doc/developer/: doxygenConfig
LiDARToolbox/src/: CMakeLists.txt  WToolkit.cpp
LiDARToolbox/src/buildingsDetection/: WBuildingDetector.cpp  WBuildingDetector.h  WMBuildingsDetection.cpp  WMBuildingsDetection.h  WMBuildingsDetection.xpm
LiDARToolbox/src/buildingsDetectionByPCA/: WMBuildingsDetectionByPCA.cpp  WMBuildingsDetectionByPCA.h  WMBuildingsDetectionByPCA.xpm  (+2 more)
MyOpenWalnutToolbox/: README
MyOpenWalnutToolbox/src/: CMakeLists.txt  WToolkit.cpp  WToolkit.h
TransferCalcToolbox/: .directory
TransferCalcToolbox/src/: CMakeLists.txt  WToolkit.cpp
Unmaintained/: COPYING  README  VERSION
Unmaintained/src/: CMakeLists.txt  WToolkit.cpp  WToolkit.h
__repository_tools/: hgStatistics  makeAllToolboxes  makeToolbox
imageSpaceTensorLIC/src/: CMakeLists.txt  WMImageSpaceTensorLIC.cpp  WMImageSpaceTensorLIC.h  WToolkit.cpp  WTuringTextureCreator.cpp  WTuringTextureCreator.h
(+253 files in other folders)
